# sars

./: .gitignore  Cargo.toml  README.md
benchmark/: benchmark.rs
buildsa/: buildsa.rs
data/: data.txt
querysa/: querysa.rs
src/: fasta_file.rs  lib.rs  main.rs  prefix_table.rs  suffix_array.rs
src/commons/: commons.rs  fasta_file.rs  mod.rs  prefix_table.rs  query_mode.rs  suffix_array.rs
