[package]
name = "sars"
version = "0.1.0"
edition = "2021"
authors = ["Alperen Keles"]

[[bin]]
name = "buildsa"
path = "buildsa/buildsa.rs"

[[bin]]
name = "querysa"
path = "querysa/querysa.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive", "cargo"] }
bio = { version = "*" }
bincode = { version = "1.3" }
serde = { version = "1.0" }
rustc-hash = "1.1.0"
bstr = "0.2.17"